//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  status UserStatus [not null, default: 'Pending']
  role Role [not null]
  roleId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  properties Property [not null]
  email Email
  orders UserOrder [not null]
}

Table Role {
  id String [pk]
  ord Int [unique, not null]
  name String [unique, not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  users User [not null]
}

Table PropertyCategory {
  id String [pk]
  name String [unique, not null]
  dataType DataType [not null, default: 'String']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  properties Property [not null]
  userPropertyComputeds UserPropertyComputed [not null]
  sizesets Sizeset [not null]
}

Table Property {
  id String [pk]
  name String [unique, not null]
  propertyCategory PropertyCategory [not null]
  propertyCategoryId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  users User [not null]
  products Product [not null]
  shops Shop [not null]
}

Table UserPropertyComputed {
  id String [pk]
  ord Int [unique, not null]
  isUnique Boolean [not null, default: false]
  propertyCategory PropertyCategory [not null]
  propertyCategoryId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Email {
  user User [not null]
  userId String [unique, not null]
  email String [unique, not null]
  verificationToken String
  isVerified Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  emailPassword EmailPassword
}

Table EmailPassword {
  email String [unique, not null]
  emailModel Email [not null]
  passwordHash String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table UserOrder {
  id String [pk]
  userId String [not null]
  user User [not null]
  amount Float [not null]
  fee Float [not null]
  discount Float [not null]
  total Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  items OrderItem [not null]
}

Table OrderItem {
  id String [pk]
  orderId String [not null]
  order UserOrder [not null]
  itemsCount Int [not null, default: 1]
  price Float [not null]
  itemsAmount Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  userOrderId String [not null]
}

Table ProductCategory {
  id String [pk]
  fullIds Json [not null]
  parentId String
  ord Int [not null, default: 1]
  parent ProductCategory
  children ProductCategory [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  products Product [not null]

  indexes {
    (parentId, ord) [unique]
  }
}

Table Product {
  id String [pk]
  categoryId String
  category ProductCategory
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  properties Property [not null]
  shops Shop [not null]
  videoId String
  pictures Picture [not null]
  video Video
}

Table Shop {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  properties Property [not null]
  products Product [not null]
  videoId String
  video Video
  pictures Picture [not null]
}

Table Picture {
  id String [pk]
  location String [not null]
  ord Int [not null, default: 1]
  size Int
  width Int
  height Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  products Product [not null]
  shops Shop [not null]
}

Table Video {
  id String [pk]
  location String [not null]
  size Int
  duration Int
  width Int
  height Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  products Product [not null]
  shops Shop [not null]
}

Table Sizeset {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  categories PropertyCategory [not null]
}

Enum UserStatus {
  Pending
  Activated
  Blacklisted
  Deleted
}

Enum DataType {
  String
  Number
  Boolean
  DateTime
}

Ref: User.roleId > Role.id

Ref: Property.propertyCategoryId > PropertyCategory.id

Ref: UserPropertyComputed.propertyCategoryId > PropertyCategory.id

Ref: Email.userId - User.id

Ref: EmailPassword.email - Email.email

Ref: UserOrder.userId > User.id

Ref: OrderItem.userOrderId > UserOrder.id

Ref: ProductCategory.parentId - ProductCategory.id

Ref: Product.categoryId > ProductCategory.id

Ref: Product.videoId > Video.id

Ref: Shop.videoId > Video.id